<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    tools:context=".Asteroides" >

    <TextView
        style="@style/TextoAsteroides"
        android:text="@string/tituloAplicacion" />

    <Button
        android:id="@+id/Button01"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Arrancar" />

    <Button
        android:id="@+id/Button02"
        style="@style/TextoAsteroides.Botones"
        android:onClick="lanzarPreferencias"
        android:text="@string/Configurar" />

    <Button
        android:id="@+id/Button03"
        style="@style/TextoAsteroides.Botones"
        android:onClick="lanzarAcercaDe"
        android:text="@string/Acercade" />

    <Button
        android:id="@+id/Button04"
        style="@style/TextoAsteroides.Botones"
        android:text="@string/Salir" />

</LinearLayout>